--- a/src/main/resources/templates/CreateNode.html
+++ b/src/main/resources/templates/CreateNode.html
@@ -10,7 +10,7 @@
         <div class="header">
             <div class="container">
                 <div class="header_menu-line">
-                    <div class="header_menu_text-element selected_element"><a th:href="@{/}">Редактироние меню</a></div>
+                    <div class="header_menu_text-element selected_element"><a th:href="@{/}">Редактирование меню</a></div>
                     <div class="header_menu_text-element"><a th:href="@{/message}">Массовая рассылка</a></div>
                 </div>
             </div>
